# self-checksumming

./: .gitignore  AcyclicGrpahGen.c  AcyclicGrpahGen.cpp  CMakeLists.txt  READ-SC-OH.ME  README.md  example.c  gdb_script.txt  gdb_script_for_do_assert.txt  rtlib.c  run-binary-patch.sh  run-llvm-patch.sh  run-oh-extract-sc-binary.sh  run-sc-oh-binary.sh  run-sc-oh-eval.sh  run-sc-oh.sh  run-sc.sh  run.sh
Docker/: Dockerfile
cmake/: self-checksummingConfig.cmake.in
hook/: libintercept.c  libminm.c  makefile  run-intercept.sh  run-mitm.sh
include/self-checksumming/: CheckersNetwork.h  CheckersNetworkBase.h  DAGCheckersNetwork.h  FunctionFilter.h  FunctionMarker.h  PatchManifest.h  Stats.h
intercepts/: intercept_snake  intercept_tetris
patcher/: dump_pipe.py  radare2_patch.py
process/: OH-SC-Process.vsdx
src/: .SC.cpp.swp  AssertFunctionMarkPass.cpp  AssertFunctionMarkPass.h  CMakeLists.txt  CheckersNetwork.cpp  CheckersNetwork.h  CheckersNetworkBase.h  DAGCheckersNetwork.cpp  DAGCheckersNetwork.h  DAGtester.cpp  FunctionFilter.cpp  FunctionFilter.h  FunctionInfo.cpp  FunctionInfo.h  FunctionMarker.cpp  FunctionMarker.h  PatchManifest.cpp  PatchManifest.h  SC.cpp  SCPatch.cpp  Stats.cpp  Stats.h
